y.output
Terminals unused in grammar

   TOKEN_ERROR


State 0 conflicts: 1 reduce/reduce
State 32 conflicts: 4 reduce/reduce
State 102 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: progrElements
    2        | %empty

    3 progrElements: funcDeclaration progrElements
    4              | varDeclaration progrElements
    5              | %empty

    6 name: TK_IDENTIFIER

    7 vector: name 'q' expression 'p'

    8 type: KW_CHAR
    9     | KW_INT
   10     | KW_FLOAT

   11 literal: LIT_INTEGER
   12        | LIT_FLOAT
   13        | LIT_CHAR

   14 funcDeclaration: type name 'd' parameterList 'b'
   15                | type name 'd' parameterList 'b' cmd

   16 cmdBlock: '{' cmdList '}'

   17 cmdList: cmd ';' cmdList
   18        | %empty

   19 cmd: attribution
   20    | KW_IF expression KW_THEN cmd
   21    | KW_IF expression KW_THEN cmd KW_ELSE cmd
   22    | KW_WHILE expression cmdBlock
   23    | KW_READ name
   24    | KW_PRINT argList
   25    | KW_RETURN expression
   26    | cmdBlock
   27    | %empty

   28 parameterList: type name ',' parameterList
   29              | type name
   30              | %empty

   31 litList: literal litList
   32        | literal

   33 argList: expression ',' argList
   34        | expression

   35 varDeclaration: type name '=' expression ';'
   36               | type name 'q' LIT_INTEGER 'p' ';'
   37               | type name 'q' LIT_INTEGER 'p' ':' litList ';'

   38 attribution: name '=' expression
   39            | vector '=' expression

   40 expression: literal
   41           | LIT_STRING
   42           | name
   43           | vector
   44           | expression '+' expression
   45           | expression '-' expression
   46           | expression '*' expression
   47           | expression '/' expression
   48           | expression '<' expression
   49           | expression '>' expression
   50           | expression OPERATOR_LE expression
   51           | expression OPERATOR_GE expression
   52           | expression OPERATOR_EQ expression
   53           | expression OPERATOR_OR expression
   54           | expression OPERATOR_AND expression
   55           | OPERATOR_NOT expression
   56           | 'd' expression 'b'
   57           | name 'd' argList 'b'
   58           | %empty


Terminals, with rules where they appear

$end (0) 0
'*' (42) 46
'+' (43) 44
',' (44) 28 33
'-' (45) 45
'/' (47) 47
':' (58) 37
';' (59) 17 35 36 37
'<' (60) 48
'=' (61) 35 38 39
'>' (62) 49
'b' (98) 14 15 56 57
'd' (100) 14 15 56 57
'p' (112) 7 36 37
'q' (113) 7 36 37
'{' (123) 16
'}' (125) 16
error (256)
KW_CHAR (258) 8
KW_INT (259) 9
KW_FLOAT (260) 10
KW_IF (261) 20 21
KW_THEN (262) 20 21
KW_ELSE (263) 21
KW_WHILE (264) 22
KW_READ (265) 23
KW_RETURN (266) 25
KW_PRINT (267) 24
OPERATOR_LE (268) 50
OPERATOR_GE (269) 51
OPERATOR_EQ (270) 52
OPERATOR_OR (271) 53
OPERATOR_AND (272) 54
OPERATOR_NOT (273) 55
TK_IDENTIFIER (274) 6
LIT_INTEGER (275) 11 36 37
LIT_FLOAT (276) 12
LIT_CHAR (277) 13
LIT_STRING (278) 41
TOKEN_ERROR (279)


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
program (42)
    on left: 1 2, on right: 0
progrElements (43)
    on left: 3 4 5, on right: 1 3 4
name (44)
    on left: 6, on right: 7 14 15 23 28 29 35 36 37 38 42 57
vector (45)
    on left: 7, on right: 39 43
type (46)
    on left: 8 9 10, on right: 14 15 28 29 35 36 37
literal (47)
    on left: 11 12 13, on right: 31 32 40
funcDeclaration (48)
    on left: 14 15, on right: 3
cmdBlock (49)
    on left: 16, on right: 22 26
cmdList (50)
    on left: 17 18, on right: 16 17
cmd (51)
    on left: 19 20 21 22 23 24 25 26 27, on right: 15 17 20 21
parameterList (52)
    on left: 28 29 30, on right: 14 15 28
litList (53)
    on left: 31 32, on right: 31 37
argList (54)
    on left: 33 34, on right: 24 33 57
varDeclaration (55)
    on left: 35 36 37, on right: 4
attribution (56)
    on left: 38 39, on right: 19
expression (57)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
    58, on right: 7 20 21 22 25 33 34 35 38 39 44 45 46 47 48 49 50
    51 52 53 54 55 56


State 0

    0 $accept: . program $end

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $end      reduce using rule 2 (program)
    $end      [reduce using rule 5 (progrElements)]
    $default  reduce using rule 2 (program)

    program          go to state 4
    progrElements    go to state 5
    type             go to state 6
    funcDeclaration  go to state 7
    varDeclaration   go to state 8


State 1

    8 type: KW_CHAR .

    $default  reduce using rule 8 (type)


State 2

    9 type: KW_INT .

    $default  reduce using rule 9 (type)


State 3

   10 type: KW_FLOAT .

    $default  reduce using rule 10 (type)


State 4

    0 $accept: program . $end

    $end  shift, and go to state 9


State 5

    1 program: progrElements .

    $default  reduce using rule 1 (program)


State 6

   14 funcDeclaration: type . name 'd' parameterList 'b'
   15                | type . name 'd' parameterList 'b' cmd
   35 varDeclaration: type . name '=' expression ';'
   36               | type . name 'q' LIT_INTEGER 'p' ';'
   37               | type . name 'q' LIT_INTEGER 'p' ':' litList ';'

    TK_IDENTIFIER  shift, and go to state 10

    name  go to state 11


State 7

    3 progrElements: funcDeclaration . progrElements

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 5 (progrElements)

    progrElements    go to state 12
    type             go to state 6
    funcDeclaration  go to state 7
    varDeclaration   go to state 8


State 8

    4 progrElements: varDeclaration . progrElements

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 5 (progrElements)

    progrElements    go to state 13
    type             go to state 6
    funcDeclaration  go to state 7
    varDeclaration   go to state 8


State 9

    0 $accept: program $end .

    $default  accept


State 10

    6 name: TK_IDENTIFIER .

    $default  reduce using rule 6 (name)


State 11

   14 funcDeclaration: type name . 'd' parameterList 'b'
   15                | type name . 'd' parameterList 'b' cmd
   35 varDeclaration: type name . '=' expression ';'
   36               | type name . 'q' LIT_INTEGER 'p' ';'
   37               | type name . 'q' LIT_INTEGER 'p' ':' litList ';'

    'q'  shift, and go to state 14
    'd'  shift, and go to state 15
    '='  shift, and go to state 16


State 12

    3 progrElements: funcDeclaration progrElements .

    $default  reduce using rule 3 (progrElements)


State 13

    4 progrElements: varDeclaration progrElements .

    $default  reduce using rule 4 (progrElements)


State 14

   36 varDeclaration: type name 'q' . LIT_INTEGER 'p' ';'
   37               | type name 'q' . LIT_INTEGER 'p' ':' litList ';'

    LIT_INTEGER  shift, and go to state 17


State 15

   14 funcDeclaration: type name 'd' . parameterList 'b'
   15                | type name 'd' . parameterList 'b' cmd

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 30 (parameterList)

    type           go to state 18
    parameterList  go to state 19


State 16

   35 varDeclaration: type name '=' . expression ';'

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 29


State 17

   36 varDeclaration: type name 'q' LIT_INTEGER . 'p' ';'
   37               | type name 'q' LIT_INTEGER . 'p' ':' litList ';'

    'p'  shift, and go to state 30


State 18

   28 parameterList: type . name ',' parameterList
   29              | type . name

    TK_IDENTIFIER  shift, and go to state 10

    name  go to state 31


State 19

   14 funcDeclaration: type name 'd' parameterList . 'b'
   15                | type name 'd' parameterList . 'b' cmd

    'b'  shift, and go to state 32


State 20

   55 expression: OPERATOR_NOT . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 33


State 21

   11 literal: LIT_INTEGER .

    $default  reduce using rule 11 (literal)


State 22

   12 literal: LIT_FLOAT .

    $default  reduce using rule 12 (literal)


State 23

   13 literal: LIT_CHAR .

    $default  reduce using rule 13 (literal)


State 24

   41 expression: LIT_STRING .

    $default  reduce using rule 41 (expression)


State 25

   56 expression: 'd' . expression 'b'

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 34


State 26

    7 vector: name . 'q' expression 'p'
   42 expression: name .
   57           | name . 'd' argList 'b'

    'q'  shift, and go to state 35
    'd'  shift, and go to state 36

    $default  reduce using rule 42 (expression)


State 27

   43 expression: vector .

    $default  reduce using rule 43 (expression)


State 28

   40 expression: literal .

    $default  reduce using rule 40 (expression)


State 29

   35 varDeclaration: type name '=' expression . ';'
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    OPERATOR_LE   shift, and go to state 37
    OPERATOR_GE   shift, and go to state 38
    OPERATOR_EQ   shift, and go to state 39
    OPERATOR_OR   shift, and go to state 40
    OPERATOR_AND  shift, and go to state 41
    '<'           shift, and go to state 42
    '>'           shift, and go to state 43
    '+'           shift, and go to state 44
    '-'           shift, and go to state 45
    '*'           shift, and go to state 46
    '/'           shift, and go to state 47
    ';'           shift, and go to state 48


State 30

   36 varDeclaration: type name 'q' LIT_INTEGER 'p' . ';'
   37               | type name 'q' LIT_INTEGER 'p' . ':' litList ';'

    ';'  shift, and go to state 49
    ':'  shift, and go to state 50


State 31

   28 parameterList: type name . ',' parameterList
   29              | type name .

    ','  shift, and go to state 51

    $default  reduce using rule 29 (parameterList)


State 32

   14 funcDeclaration: type name 'd' parameterList 'b' .
   15                | type name 'd' parameterList 'b' . cmd

    KW_IF          shift, and go to state 52
    KW_WHILE       shift, and go to state 53
    KW_READ        shift, and go to state 54
    KW_RETURN      shift, and go to state 55
    KW_PRINT       shift, and go to state 56
    TK_IDENTIFIER  shift, and go to state 10
    '{'            shift, and go to state 57

    $end      reduce using rule 14 (funcDeclaration)
    $end      [reduce using rule 27 (cmd)]
    KW_CHAR   reduce using rule 14 (funcDeclaration)
    KW_CHAR   [reduce using rule 27 (cmd)]
    KW_INT    reduce using rule 14 (funcDeclaration)
    KW_INT    [reduce using rule 27 (cmd)]
    KW_FLOAT  reduce using rule 14 (funcDeclaration)
    KW_FLOAT  [reduce using rule 27 (cmd)]
    $default  reduce using rule 14 (funcDeclaration)

    name         go to state 58
    vector       go to state 59
    cmdBlock     go to state 60
    cmd          go to state 61
    attribution  go to state 62


State 33

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression
   55           | OPERATOR_NOT expression .

    $default  reduce using rule 55 (expression)


State 34

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression
   56           | 'd' expression . 'b'

    OPERATOR_LE   shift, and go to state 37
    OPERATOR_GE   shift, and go to state 38
    OPERATOR_EQ   shift, and go to state 39
    OPERATOR_OR   shift, and go to state 40
    OPERATOR_AND  shift, and go to state 41
    '<'           shift, and go to state 42
    '>'           shift, and go to state 43
    '+'           shift, and go to state 44
    '-'           shift, and go to state 45
    '*'           shift, and go to state 46
    '/'           shift, and go to state 47
    'b'           shift, and go to state 63


State 35

    7 vector: name 'q' . expression 'p'

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 64


State 36

   57 expression: name 'd' . argList 'b'

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    argList     go to state 65
    expression  go to state 66


State 37

   50 expression: expression OPERATOR_LE . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 67


State 38

   51 expression: expression OPERATOR_GE . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 68


State 39

   52 expression: expression OPERATOR_EQ . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 69


State 40

   53 expression: expression OPERATOR_OR . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 70


State 41

   54 expression: expression OPERATOR_AND . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 71


State 42

   48 expression: expression '<' . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 72


State 43

   49 expression: expression '>' . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 73


State 44

   44 expression: expression '+' . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 74


State 45

   45 expression: expression '-' . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 75


State 46

   46 expression: expression '*' . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 76


State 47

   47 expression: expression '/' . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 77


State 48

   35 varDeclaration: type name '=' expression ';' .

    $default  reduce using rule 35 (varDeclaration)


State 49

   36 varDeclaration: type name 'q' LIT_INTEGER 'p' ';' .

    $default  reduce using rule 36 (varDeclaration)


State 50

   37 varDeclaration: type name 'q' LIT_INTEGER 'p' ':' . litList ';'

    LIT_INTEGER  shift, and go to state 21
    LIT_FLOAT    shift, and go to state 22
    LIT_CHAR     shift, and go to state 23

    literal  go to state 78
    litList  go to state 79


State 51

   28 parameterList: type name ',' . parameterList

    KW_CHAR   shift, and go to state 1
    KW_INT    shift, and go to state 2
    KW_FLOAT  shift, and go to state 3

    $default  reduce using rule 30 (parameterList)

    type           go to state 18
    parameterList  go to state 80


State 52

   20 cmd: KW_IF . expression KW_THEN cmd
   21    | KW_IF . expression KW_THEN cmd KW_ELSE cmd

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 81


State 53

   22 cmd: KW_WHILE . expression cmdBlock

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 82


State 54

   23 cmd: KW_READ . name

    TK_IDENTIFIER  shift, and go to state 10

    name  go to state 83


State 55

   25 cmd: KW_RETURN . expression

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    expression  go to state 84


State 56

   24 cmd: KW_PRINT . argList

    OPERATOR_NOT   shift, and go to state 20
    TK_IDENTIFIER  shift, and go to state 10
    LIT_INTEGER    shift, and go to state 21
    LIT_FLOAT      shift, and go to state 22
    LIT_CHAR       shift, and go to state 23
    LIT_STRING     shift, and go to state 24
    'd'            shift, and go to state 25

    $default  reduce using rule 58 (expression)

    name        go to state 26
    vector      go to state 27
    literal     go to state 28
    argList     go to state 85
    expression  go to state 66


State 57

   16 cmdBlock: '{' . cmdList '}'

    KW_IF          shift, and go to state 52
    KW_WHILE       shift, and go to state 53
    KW_READ        shift, and go to state 54
    KW_RETURN      shift, and go to state 55
    KW_PRINT       shift, and go to state 56
    TK_IDENTIFIER  shift, and go to state 10
    '{'            shift, and go to state 57

    ';'       reduce using rule 27 (cmd)
    $default  reduce using rule 18 (cmdList)

    name         go to state 58
    vector       go to state 59
    cmdBlock     go to state 60
    cmdList      go to state 86
    cmd          go to state 87
    attribution  go to state 62


State 58

    7 vector: name . 'q' expression 'p'
   38 attribution: name . '=' expression

    'q'  shift, and go to state 35
    '='  shift, and go to state 88


State 59

   39 attribution: vector . '=' expression

    '='  shift, and go to state 89


State 60

   26 cmd: cmdBlock .

    $default  reduce using rule 26 (cmd)


State 61

   15 funcDeclaration: type name 'd' parameterList 'b' cmd .

    $default  reduce using rule 15 (funcDeclaration)


State 62

   19 cmd: attribution .

    $default  reduce using rule 19 (cmd)


State 63

   56 expression: 'd' expression 'b' .

    $default  reduce using rule 56 (expression)


State 64

    7 vector: name 'q' expression . 'p'
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    OPERATOR_LE   shift, and go to state 37
    OPERATOR_GE   shift, and go to state 38
    OPERATOR_EQ   shift, and go to state 39
    OPERATOR_OR   shift, and go to state 40
    OPERATOR_AND  shift, and go to state 41
    '<'           shift, and go to state 42
    '>'           shift, and go to state 43
    '+'           shift, and go to state 44
    '-'           shift, and go to state 45
    '*'           shift, and go to state 46
    '/'           shift, and go to state 47
    'p'           shift, and go to state 90


State 65

   57 expression: name 'd' argList . 'b'

    'b'  shift, and go to state 91


State 66

   33 argList: expression . ',' argList
   34        | expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    OPERATOR_LE   shift, and go to state 37
    OPERATOR_GE   shift, and go to state 38
    OPERATOR_EQ   shift, and go to state 39
    OPERATOR_OR   shift, and go to state 40
    OPERATOR_AND  shift, and go to state 41
    '<'           shift, and go to state 42
    '>'           shift, and go to state 43
    '+'           shift, and go to state 44
    '-'           shift, and go to state 45
    '*'           shift, and go to state 46
    '/'           shift, and go to state 47
    ','           shift, and go to state 92

    $default  reduce using rule 34 (argList)


State 67

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   50           | expression OPERATOR_LE expression .
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 50 (expression)


State 68

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   51           | expression OPERATOR_GE expression .
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 51 (expression)


State 69

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   52           | expression OPERATOR_EQ expression .
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 52 (expression)


State 70

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   53           | expression OPERATOR_OR expression .
   54           | expression . OPERATOR_AND expression

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 53 (expression)


State 71

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression
   54           | expression OPERATOR_AND expression .

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 54 (expression)


State 72

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   48           | expression '<' expression .
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 48 (expression)


State 73

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   49           | expression '>' expression .
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 49 (expression)


State 74

   44 expression: expression . '+' expression
   44           | expression '+' expression .
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 44 (expression)


State 75

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   45           | expression '-' expression .
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 45 (expression)


State 76

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   46           | expression '*' expression .
   47           | expression . '/' expression
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression

    $default  reduce using rule 46 (expression)


State 77

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   47           | expression '/' expression .
   48           | expression . '<' expression
   49           | expression . '>' expression
   50           | expression . OPERATOR_LE expression
   51           | expression . OPERATOR_GE expression
   52           | expression . OPERATOR_EQ expression
   53           | expression . OPERATOR_OR expression
   54           | expression . OPERATOR_AND expression
